# pets-tui

./: Cargo.toml  README.md
data/: db.json
src/: lib.rs  main.rs
